# 3rolib

./: .githint  .gitignore  AGENTS.md  LICENSE  README.md  index.html  manga-manager-app-design.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
.github/workflows/: build.yml
docs/: FRONTEND-GUIDE.md  PLUGIN-API.md  README.md  RUST-IMPLEMENTATION.md  SCRIPTING-API.md
src/: App.vue  main.ts  material-web.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/aria2c-bin/macos/: aria2c
src-tauri/binaries/aria2c-bin/macos/libs/: libcares.2.19.5.dylib  libintl.8.dylib  libsqlite3.3.53.2.dylib  libssh2.1.dylib  libssl.3.dylib
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 20260709000001_init.sql  20260709000002_fix_fts.sql  20260710000001_tasks.sql
src-tauri/schema/: schema.sql
src-tauri/src/: errors.rs  main.rs
src-tauri/src/commands/: book.rs  cookies.rs  ehentai.rs  mod.rs  pixiv.rs  pixiv_login.rs  reset.rs  search.rs  server.rs  sync.rs  tasks.rs
src-tauri/src/commands/cookies/: adapter.rs
src-tauri/src/db/: mod.rs
src-tauri/src/models/: mod.rs
src-tauri/src/services/: aria2.rs  ehentai.rs  library.rs  mod.rs  opds.rs  pixiv.rs  rss.rs  search.rs  storage.rs  task.rs  task_manager.rs
src/components/: AppShell.vue  AppToast.vue  BrandIcon.vue  EHentaiCard.vue  ErrorBoundary.vue  FabButton.vue  FeedList.vue  MdiIcon.vue  PixivCard.vue  SearchBox.vue  SourceCard.vue
src/composables/: useBrowseFeed.ts  useDebouncedModel.ts  useInfiniteSentinel.ts
src/i18n/: en.ts  index.ts  ja.ts  zh.ts
src/router/: index.ts
src/services/: api.ts  md3-theme.ts  thumb-cache.ts
src/stores/: ehentai-browse.ts  library.ts  pixiv-browse.ts  settings.ts  tasks.ts  theme.ts  toast.ts
src/styles/: md3.css  tokens.css
src/types/: index.ts
src/utils/: format.ts
src/views/: EHentai.vue  Library.vue  PixivDownload.vue  Reader.vue  Settings.vue  Tasks.vue
tests/bdd/: CHANGELOG.md  MIGRATION.md  README.md
tests/bdd/features/: ehentai_login.feature  pixiv_login.feature
