[package]
name = "erolib"
version = "0.1.0"
description = "A desktop manga library and downloader app"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["wry"] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", default-features = false, features = ["sqlite", "runtime-tokio-rustls", "chrono"] }
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.18"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
zip = "0.6"
# ugoira (動画作) → GIF: decode jpg frames + encode with per-frame delays.
# GifEncoder auto-quantizes true color → 256-color palette (color_quant).
image = { version = "0.25", default-features = false, features = ["gif", "jpeg", "png"] }
quick-xml = { version = "0.31", features = ["serialize"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5.0"
urlencoding = "2.1"
boa_engine = "0.17"
http = "1.4.2"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

# Workaround: rustc (1.8x–1.96) emits malformed Mach-O ("mis-aligned LINKEDIT
# string pool") for proc-macro dylibs when debuginfo is absent (release's default
# `debuginfo = 0`) — dyld on macOS 26 rejects them, breaking every release build.
# dev builds (`debuginfo = 2`) are unaffected. Keeping `debuginfo = 2` on the
# release profile makes the proc-macro codegen match dev, so all derive crates
# (serde_derive/thiserror/phf/zerofrom/ctor/tauri_macros/…) link cleanly. The
# final binary's debuginfo is then `strip`ped, so the shipped app isn't bloated.
# (`sqlx`'s default `macros`/`migrate`/`json`/`any` features are off —
# `sqlx-macros` was malformed even with debuginfo — and FromRow/migrate are
# hand-implemented; see src/models/mod.rs, src/services/task.rs, src/db/mod.rs.)
[profile.release]
opt-level = 3
debug = 2
strip = "symbols"
