[package]
name = "erolib"
version = "0.1.0"
description = "A desktop manga library and downloader app"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["wry"] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", default-features = false, features = ["sqlite", "runtime-tokio-rustls", "chrono"] }
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.18"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
zip = "0.6"
# ugoira (動画作) → GIF: decode jpg frames + encode with per-frame delays.
# GifEncoder auto-quantizes true color → 256-color palette (color_quant).
image = { version = "0.25", default-features = false, features = ["gif", "jpeg", "png"] }
quick-xml = { version = "0.31", features = ["serialize"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5.0"
urlencoding = "2.1"
boa_engine = "0.17"
http = "1.4.2"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

# `debug = 2` was added on macOS 26 as a guard: rustc ≤1.96 could emit proc-macro
# dylibs that dyld rejected unless debuginfo matched dev's, so matching it kept
# release builds linking. On macOS 27 it no longer seems required, but it's
# harmless (the final binary is `strip`ped), so it stays as cheap insurance.
# Heads-up: a `can't find crate for <proc-macro>` in release is usually a cargo
# cache inconsistency from mixing feature configs (e.g. `cargo build --release`
# then `tauri build`) — fix it with `cargo clean`, not by editing this profile.
[profile.release]
opt-level = 3
debug = 2
strip = "symbols"
