[package]
name = "erolib"
version = "0.1.0"
description = "A desktop manga library and downloader app"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["wry"] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", default-features = false, features = ["sqlite", "runtime-tokio-rustls", "chrono"] }
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
# Windows WebView2 cookie capture via COM (async GetCookies on a worker
# thread; non-blocking on the WebView2 main thread). Same versions as the
# transitive deps already in Cargo.lock.
webview2-com = "0.38"
# windows-core exposes the `PWSTR` / `PCWSTR` / `Result` / `Interface`
# types used by the cookie capture module. Pinned to 0.61 to match the
# version that the rest of the project (tauri-wry / wry / windows-rs)
# already depends on.
windows-core = "0.61"
# url::Url — used by cookies::adapter::SessionAdapter::is_post_login.
url = "2"
scraper = "0.18"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
zip = "0.6"
# Metadata hash for local one-way sync filenames (sha256 of source/title/pages/size).
sha2 = "0.10"
# Sync SQLite client for reading the WebView2 cookie database directly on
# Windows (`<APPLOCALDATA>/EBWebView/Default/Network/Cookies`). Pinned to
# 0.29 so the cargo resolver unifies `libsqlite3-sys` against sqlx 0.7's
# 0.27 (one `sqlite3` per binary). Avoids the JS-eval blind spot for
# HttpOnly cookies like Pixiv's PHPSESSID.
rusqlite = { version = "0.29", default-features = false, features = ["bundled"] }
# ugoira (動画作) → GIF: decode jpg frames + encode with per-frame delays.
# GifEncoder auto-quantizes true color → 256-color palette (color_quant).
image = { version = "0.25", default-features = false, features = ["gif", "jpeg", "png"] }
quick-xml = { version = "0.31", features = ["serialize"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5.0"
urlencoding = "2.1"
boa_engine = "0.17"
http = "1.4.2"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

# Heads-up: a `can't find crate for <proc-macro>` in release is usually a cargo
# cache inconsistency from mixing feature configs (e.g. `cargo build --release`
# then `tauri build`) — fix it with `cargo clean`, not by editing this profile.
#
# Do NOT set `debug = 2` in release: on macOS 27 dyld rejects proc-macro dylibs
# with "mis-aligned LINKEDIT string pool" when debuginfo is embedded then
# `strip = "symbols"` re-aligns the binary.
#
# `build-override` keeps `strip = "none"` for proc-macro / build-script crates;
# their dylibs don't ship in the final bundle anyway, and skipping the strip
# avoids a macOS 27 dyld mis-alignment on some of them.
[profile.release]
opt-level = 3
strip = "symbols"

[profile.release.build-override]
opt-level = 0
strip = "none"
